--- a/src/ontology/Makefile
+++ b/src/ontology/Makefile
@@ -16,9 +16,9 @@
 # these can be overwritten on the command line
 
 OBOBASE=                    http://purl.obolibrary.org/obo
-URIBASE=                    https://purl.org/demkg
+URIBASE=                    http://purl.org/demkg
 ONT=                        demkg
-ONTBASE=                    https://purl.org/demkg/ontology
+ONTBASE=                    http://purl.org/demkg/ontology
 EDIT_FORMAT=                owl
 SRC =                       $(ONT)-edit.$(EDIT_FORMAT)
 MAKE_FAST=                  $(MAKE) IMP=false PAT=false COMP=false MIR=false
@@ -113,7 +113,7 @@ all_main: $(MAIN_FILES)
 # ----------------------------------------
 
 
-IMPORTS =  ro bfo pato hp go uberon obi nddo nio
+IMPORTS =  ro bfo pato hp go uberon obi iao npt
 
 IMPORT_ROOTS = $(patsubst %, $(IMPORTDIR)/%_import, $(IMPORTS))
 IMPORT_OWL_FILES = $(foreach n,$(IMPORT_ROOTS), $(n).owl)
@@ -196,10 +196,10 @@ endif
 # ----------------------------------------
 
 $(REPORTDIR)/$(SRC)-obo-report.tsv: $(SRCMERGED) | $(REPORTDIR)
-	$(ROBOT) report -i $< $(REPORT_LABEL) $(REPORT_PROFILE_OPTS) --fail-on $(REPORT_FAIL_ON) --base-iri https://purl.org/demkg/DEMKG_ --print 5 -o $@
+	$(ROBOT) report -i $< $(REPORT_LABEL) $(REPORT_PROFILE_OPTS) --fail-on $(REPORT_FAIL_ON) --base-iri http://purl.org/demkg/DEMKG_ --print 5 -o $@
 
 $(REPORTDIR)/%-obo-report.tsv: % | $(REPORTDIR)
-	$(ROBOT) report -i $< $(REPORT_LABEL) $(REPORT_PROFILE_OPTS) --fail-on $(REPORT_FAIL_ON) --base-iri https://purl.org/demkg/DEMKG_ --print 5 -o $@
+	$(ROBOT) report -i $< $(REPORT_LABEL) $(REPORT_PROFILE_OPTS) --fail-on $(REPORT_FAIL_ON) --base-iri http://purl.org/demkg/DEMKG_ --print 5 -o $@
 
 # ----------------------------------------
 # Release assets
@@ -411,19 +411,20 @@ mirror-obi: | $(TMPDIR)
 		mv $@.tmp.owl $(TMPDIR)/$@.owl; fi
 
 
-## ONTOLOGY: nddo
-.PHONY: mirror-nddo
-.PRECIOUS: $(MIRRORDIR)/nddo.owl
-mirror-nddo: | $(TMPDIR)
-	if [ $(MIR) = true ] && [ $(IMP) = true ]; then $(ROBOT) convert -I http://www.purl.org/NDDO -o $@.tmp.owl &&\
+## ONTOLOGY: iao
+.PHONY: mirror-iao
+.PRECIOUS: $(MIRRORDIR)/iao.owl
+mirror-iao: | $(TMPDIR)
+	if [ $(MIR) = true ] && [ $(IMP) = true ]; then curl -L $(OBOBASE)/iao.owl --create-dirs -o $(MIRRORDIR)/iao.owl --retry 4 --max-time 200 &&\
+		$(ROBOT) convert -i $(MIRRORDIR)/iao.owl -o $@.tmp.owl &&\
 		mv $@.tmp.owl $(TMPDIR)/$@.owl; fi
 
 
-## ONTOLOGY: nio
-.PHONY: mirror-nio
-.PRECIOUS: $(MIRRORDIR)/nio.owl
-mirror-nio: | $(TMPDIR)
-	if [ $(MIR) = true ] && [ $(IMP) = true ]; then $(ROBOT) convert -I https://data.bioontology.org/ontologies/NIO/submissions/2/download?apikey=8b5b7825-538d-40e0-9e9e-5ab9274a9aeb -o $@.tmp.owl &&\
+## ONTOLOGY: npt
+.PHONY: mirror-npt
+.PRECIOUS: $(MIRRORDIR)/npt.owl
+mirror-npt: | $(TMPDIR)
+	if [ $(MIR) = true ] && [ $(IMP) = true ]; then $(ROBOT) convert -I https://raw.githubusercontent.com/addiehl/neuropsychological-testing-ontology/master/ontology/NPT.owl -o $@.tmp.owl &&\
 		mv $@.tmp.owl $(TMPDIR)/$@.owl; fi
 
 
