--- a/src/ontology/demkg-odk.yaml
+++ b/src/ontology/demkg-odk.yaml
@@ -2,10 +2,10 @@ id: demkg
 title: DemKG extensions ontology
 github_org: demkg-framework
 repo: extensions-ontology
-uribase: https://purl.org/demkg
-# uribase_suffix: ontology
+uribase: http://purl.org/demkg
+uribase_suffix: ontology
 namespaces: 
-  - https://purl.org/demkg/DEMKG_
+  - http://purl.org/demkg/DEMKG_
 
 export_formats:
   - owl
@@ -18,10 +18,13 @@ import_group:
     - id: go
     - id: uberon
     - id: obi
-    - id: nddo
-      mirror_from: http://www.purl.org/NDDO
-    - id: nio
-      mirror_from: https://data.bioontology.org/ontologies/NIO/submissions/2/download?apikey=8b5b7825-538d-40e0-9e9e-5ab9274a9aeb
+    - id: iao
+    # - id: nddo
+    #   mirror_from: http://www.purl.org/NDDO
+    # - id: nio
+    #   mirror_from: https://data.bioontology.org/ontologies/NIO/submissions/2/download?apikey=8b5b7825-538d-40e0-9e9e-5ab9274a9aeb
+    - id: npt
+      mirror_from: https://raw.githubusercontent.com/addiehl/neuropsychological-testing-ontology/master/ontology/NPT.owl
 
 use_dosdps: true
 dosdp_tools_options: "--obo-prefixes=true --prefixes=prefixes.yaml"
